--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,17 @@
       Angular Export Example
     </h1>
   </div>
-  <h2>Customers </h2>
+  <div class="row">
+    <div class="col-md-9">
+        <h2>Customers </h2>
+    </div>
+    <div class="col-md-3">
+      <button type="button" (click)="export()" class="btn btn-danger">
+        Export
+      </button>
+    </div>
+  </div>
+
   <app-customers
     [customers]="data"
   >
