--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-dark">
+<table class="table table-striped table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -6,7 +6,17 @@
       <th scope="col">Last</th>
       <th scope="col">email</th>
       <th scope="col">address</th>
-      <th scope="col">zipcode</th>
+      <th scope="col">
+        <div class="row">
+          <div class="col-md-6">
+              zipcode
+          </div>
+          <div class="col-md-6">
+              Export
+          </div>
+        </div>
+
+      </th>
     </tr>
   </thead>
   <tbody>
